# matador

./: .gitignore  .replit  Cargo.toml  JUSTFILE  L402convert.py  LICENSE  README.md  decodemacaroon.py  example.env  flake.nix  l402convert.sh  pyproject.toml  replit.nix  test.sh
.cargo/: example.config.toml
.config/: semgrep.yaml
.config/fakeroot/: current
.config/flakebox/: shellHook.sh
.direnv/: flake-profile-1-link  flake-profile-2-link  flake-profile-3-link  flake-profile-4-link
examples/: example.rs
misc/git-hooks/: commit-msg  pre-commit
replit/: config.py  get_token.py  replit_identity_token_manager.py
replit/identity/: exceptions.py  sign.py  verify.py
replit/identity/goval/: __init__.py
replit/identity/goval/api/: client_pb2.py  signing_pb2.py
replit/identity/goval/api/features/: features_pb2.py
replit/identity/goval/api/repl/: repl_pb2.py
scripts/: L402convert.py  curl402.py  decodemacaroon.py  gen_key.rs  quick_dev.rs
scripts/replit/: get_token.py  replit_identity_token_manager.py
sql/dev_initial/: 00-recreate-db.sql  01-create-schema.sql  02-dev-seed.sql
src/: config.rs  ctx.rs  error.rs  main.rs  model.rs
src/_dev_utils/: dev_db.rs  mod.rs
src/config/: apis.rs  config.rs  mod.rs  replit.rs
src/crypt/: macaroon.rs  mod.rs  pwd.rs  token.rs
src/ctx/: error.rs  mod.rs
src/lightning/: cashu402.rs  error.rs  l402.rs  lightning_address.rs  mod.rs
src/log/: mod.rs
src/model/: balance.rs  base.rs  error.rs  mod.rs  user.rs
src/model/store/: error.rs  mod.rs
src/services/: api_client.rs  endpoint.rs  mod.rs
src/services/clipdrop/: mod.rs  types.rs
src/services/makersuite/: mod.rs  types.rs
src/services/openai/: mod.rs  types.rs
src/utils/: error.rs  mod.rs
src/web/: error.rs  middleware_auth.rs  mod.rs  router.rs  routes_clipdrop.rs  routes_login.rs  routes_makersuite.rs  routes_openai.rs  routes_static.rs  routes_tickets.rs
src/web-folder/: index.html
src/web/middleware/: L402.rs  LightningAddress.rs  l402.rs  lightning_address.rs  mod.rs
src/web/mw/: error.rs  l402.rs  lightning_address.rs  mod.rs  mw_add_api_auth.rs  mw_auth.rs  mw_l402.rs
src/web/routes/: clipdrop.rs  endpoint.rs  makersuite.rs  mod.rs  openai.rs
tests/: openai.rs  quick_dev.rs
web-folder/: index.html
