[package]
name = "matador-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["macros"] }
httpc-test = "0.1.5"
lazy-regex = "3.0.1"
serde = { version = "1.0.183" }
serde_json = "1.0.105"
strum_macros = "0.25.2"
tokio = { version = "1.32.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs"] }
reqwest = "0.11.18"
once_cell = "1.18.0"
