[package]
name = "matador"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1"
axum = { version = "0.6.20", features = ["macros", "multipart", "form"] }
axum_typed_multipart = "0.9.0"
chrono = "0.4.26"
dotenv = "0.15.0"
hex = "0.4.3"
httpc-test = "0.1.5"
hmac = "0.12.1"
lazy-regex = "3.0.1"
lazy_static = "1.4.0"
lightning-invoice = "0.24.0"
macaroon = "0.3.0"
once_cell = "1.18.0"
rand = "0.8.5"
reqwest = { version = "0.11.18", features = ["multipart"] }
reverse-proxy-service = { version = "0.2.1", features = ["axum", "https"] }
serde = { version = "1.0.183" }
serde_json = "1.0.107"
sha2 = "0.10.7"
sqlb = "0.4.0"
sqlx = { version = "0.7.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "uuid",
    "time",
] }
strum_macros = "0.25.2"
time = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tower-cookies = "0.9.0"
tower-http = { version = "0.4.3", features = ["fs", "cors"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4", "fast-rng"] }
serial_test = "2.0.0"
serde_with = "3.3.0"
tower = "0.4.13"
futures-util = "0.3.28"
data-encoding = "2.4.0"
base64-url = "2.0.0"
moksha-core = { git = "https://github.com/ngutech21/moksha.git", branch = "master" }
http = "0.2.9"
